# internal-perplexity

./: .gitignore  Complete.md  Project.md  README.md  TODO.md  concat.sh  ip.excalidraw  metadata_schema.yaml  ui-outline.md
apps/oai-backend-py/: .gitignore  API_OVERVIEW.md  Dockerfile  Makefile  TODO.md  oai-backend-py.code-workspace  openapi.yaml  overview.md  pyproject.toml
apps/oai-backend-py/docs/: configuration.md
apps/oai-backend-py/src/: __init__.py  auth.py  auth_utils.py  config.py  main.py  milvus_client.py  overview.md  routes.py  utils.py
apps/oai-backend-py/src/agents/: __init__.py  base.py  milvuschat.py  overview.md  registry.py
apps/oai-backend-py/src/clients/: __init__.py  base.py  milvuschat.py  ollama.py  overview.md  radchat.py  router.py
apps/oai-backend-py/src/crawler/: __init__.py  arxiv_math.py  irads.py  main.py  overview.md
apps/oai-backend-py/src/endpoints/: __init__.py  agent.py  auth.py  chat.py  collections.py  document_pipelines.py  documents.py  embeddings.py  models.py  overview.md  pipeline_registry.py  search.py  tools.py
apps/oai-backend-py/src/pipelines/: __init__.py  arxiv_math.py  irads.py
apps/oai-backend-py/src/tools/: __init__.py  base.py  milvus_search.py  overview.md  registry.py  weather.py
apps/oai-backend-py/tests/: overview.md  test_agents.py  test_chat.py  test_config_guard.py  test_main.py  test_search.py
crawler/: Crawler.md  Makefile  README.md  TODO.md  crawl_arxiv.py  crawl_xmidas.py  crawler_mini.md  database-plugin.md  pyproject.toml
crawler/benchmark_results/: results.json
crawler/examples/: OVERVIEW.md  arxiv.py  church.py  irads.py  xmidas.py
crawler/src/: __init__.py  crawl_arxiv.py  crawl_church.py  crawl_irads.py  crawler.py  discovery.py  extractor_test.py  main.py  overview.md  processor_test.py
crawler/src/config/: base_config.yaml  collection_template.yaml  config_manager.py
crawler/src/config/directories/: arxiv.yaml  conference.yaml  sample.yaml
crawler/src/crawler/: README_config.md  __init__.py  config_defaults.py  config_examples.py  main.py  test_config.py  validate_config.py
crawler/src/crawler/chunker/: chunker.py  overview.md
crawler/src/crawler/config/: OVERVIEW.md  __init__.py  config_defaults.py  crawler_config.py  loader.py  overview.md  validator.py
crawler/src/crawler/converter/: __init__.py  base.py  docling.py  docling_api.py  factory.py  markitdown.py  overview.md  pymupdf.py  pymupdf4llm.py  registry.py  types.py
crawler/src/crawler/document/: __init__.py  document.py  overview.md
crawler/src/crawler/extractor/: __init__.py  extractor.py  overview.md
crawler/src/crawler/llm/: __init__.py  embeddings.py  llm.py  overview.md
crawler/src/crawler/processing/: OVERVIEW.md  __init__.py  converter.py  embeddings.py  (+3 more)
crawler/src/examples/: conference_crawler.py  process_documents.py
crawler/src/processing/: __init__.py  chunking.py  converter.py  docling_processor.py  document_content.py  document_handlers.py  embeddings.py  extractor.py  extractors.py  llm.py  process_docling.py  process_markitdown.py  processing.md  processor.py
crawler/src/storage/: __init__.py  collection.yaml  config.py  database_client.py  database_utils.py  db.md  document.json  milvus.py  milvus_benchmarks.py  schema.yaml  search_milvus.py  test_milvus.py  utils.py  vector_db.py
crawler/src/tests/: test_config.py
(+367 files in other folders)
