[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matt", email = "steffen.matthewj@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "docling>=2.47.1",
    "jsonschema>=4.25.1",
    "langchain-ollama>=0.2.0",
    "markitdown>=0.1.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "ollama>=0.5.3",
    "openai>=1.101.0",
    "pymilvus>=2.6.0",
    "pymupdf>=1.26.4",
    "requests>=2.32.5",
]

[project.scripts]
crawler = "crawler:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]