[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matt", email = "steffen.matthewj@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "fastapi>=0.124.0",
    "ipython>=9.6.0",
    "jsonschema>=4.25.1",
    "langchain-ollama>=0.2.0",
    "matplotlib>=3.10.5",
    "mypy>=1.11.0",
    "numpy>=2.3.2",
    "ollama>=0.5.3",
    "openai>=1.101.0",
    "pydantic>=2.11.7",
    "pymilvus>=2.6.0",
    "pymupdf>=1.26.4",
    "pymupdf4llm>=0.0.27",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "ruff>=0.14.5",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 200
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 200
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
explicit_package_bases = true
ignore_missing_imports = true
