[project]
name = "oai-backend-py"
version = "0.1.0"
description = "OpenAI-compatible backend proxy for Ollama"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.54.0",
    "ollama>=0.6.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "pymilvus>=2.4.0",
    "authlib>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "ruff>=0.14.3",
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "markitdown>=0.0.2",
    "pymupdf4llm>=0.1.9",
    "matplotlib>=3.10.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "black>=24.0.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 200
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 200
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
explicit_package_bases = true
ignore_missing_imports = true

